<resources>
    <string name="app_name">AndroCommut</string>
    <string name="od_origin">Origin</string>
    <string name="od_destination">Destination</string>
    <string name="od_default_instructions">Please choose an origin and a destination</string>
    <string name="od_search">Search</string>
    <string name="autosuggest_place">Place</string>
    <string name="autosuggest_search_query">Search query</string>
    <string name="autosuggest_unknown_place">Unknown place</string>
    <string name="od_origin_instructions">Please choose an origin</string>
    <string name="od_destination_instructions">Please choose a destination</string>
    <string name="od_ready_instructions">You\'ve made your choice. Let\'s go!</string>
    <string name="trip_from">From: %1$s</string>
    <string name="trip_to">To: %1$s</string>
    <string name="autosuggest_not_found">No suggestion found</string>
    <string name="autosuggest_error">Error searching for suggestions</string>
    <string name="autosuggest_retry">Retry</string>
    <string name="journey_selection_not_found">No journey found</string>
    <string name="journey_selection_error">Error searching for journeys</string>
    <string name="roadmap_section_duration">"%1$d min"</string>
    <string name="roadmap_public_transport_section_desc">Take the %1$s %2$s from %3$s to %4$s</string>
    <string name="roadmap_access_section_desc">Access by %1$s %2$s</string>
    <string name="roadmap_transfer_section_desc">Transfer by %1$s %2$s</string>
    <string name="roadmap_wait_section_desc">Wait at %1$s</string>
    <string name="roadmap_from_to">from %1$s to %2$s</string>
    <string name="roadmap_at">at %1$s</string>
    <string name="roadmap_mode_walking">walking</string>
    <string name="roadmap_mode_car">car</string>
    <string name="roadmap_mode_bike_personal">personal bike</string>
    <string name="roadmap_mode_bike_sharing">bike sharing</string>
    <string name="roadmap_mode_ride_sharing">ride sharing</string>
    <string name="roadmap_mode_taxi">taxi</string>
    <string name="roadmap_mode_unknown">unknown mode</string>
    <string name="journey_selection_transfer_type_walking">Walking</string>
    <string name="journey_selection_transfer_type_stay_in">Staying in</string>
    <string name="journey_selection_transfer_type_unknown">Unknown mode</string>
</resources>